# stockpulse-ai

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CI_CD_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DATA_TABLE_PAGINATION_SPEC.md  KEYBOARD_NAV_TESTS_README.md  LICENSE  ONBOARDING_TOUR_IMPLEMENTATION.md  POSTGRESQL_ADAPTER_TESTS_SUMMARY.md  README.md  README_ENHANCED.md  TECHNICAL_DESIGN_SPEC_CICD.md  TECHNICAL_SPEC_DB_OPTIMIZATION.md  TECHNICAL_SPEC_RESEARCH_BRIEF_ENHANCEMENTS.md  TECH_SPEC_DB_OPTIMIZATION_SUMMARY.md  TECH_SPEC_REALTIME_REFRESH.md  TESTING_DELIVERY_SUMMARY.md  VALIDATION_IMPLEMENTATION_CHECKLIST.md  ai_analytics.py  ai_providers.py  dashboard.py  docker-compose.yml  fetch_grok_models.py  install.ps1  install.sh  package-lock.json  pyproject.toml  requirements.txt  run.sh  setup.sh  stock_manager.py  stock_monitor.py  stock_monitor_enhanced.py  stop.sh
.github/: BRANCH_PROTECTION.md  CICD_OVERVIEW.md  CONTRIBUTING.md  QUICK_START_CI.md  WORKFLOW_SETUP.md  pull_request_template.md
backend/: Dockerfile  app.py  app.py_(PARTIAL_-_ADD_TO_EXISTING)  app.py_(update_-_add_to_blueprint_map)  auth_utils.py  config.py  config.py.patch  conftest.py  database.py  database.py_(UPDATED)  database.py_(update)  database.py_(updated)  database_portfolio.py  database_watchlist.py  desktop_entry.py  health.py  migrate_sqlite_to_postgres.py  migrations.py  models.py  requirements.txt  scheduler.py  stockpulse.spec  tickerpulse.spec  utils.py
components/: CryptoAlerts.js  CryptoPriceChart.js
docs/: 07-websocket-price-streaming.md  ABORT_IMPLEMENTATION_VERIFICATION.md  ABORT_TESTS_SUMMARY.md  AGENTCARD_TOAST_TESTS.md  API_ENDPOINT_TESTS_SUMMARY.md  API_TEST_QUICK_START.md  API_TEST_SUITE_SUMMARY.md  API_VALIDATION_GUIDE.md  BACKEND_AUDIT.md  CICD_TECHNICAL_SPEC.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_PIPELINE.md  CI_CD_TESTS_SUMMARY.md  COMPREHENSIVE_API_TEST_SUITE.md  CRITICAL_FIXES_TEST_PLAN.md  CRITICAL_FIXES_TEST_SUMMARY.md  DATABASE_QUERY_OPTIMIZATION.md  DATABASE_QUERY_OPTIMIZATION_TESTS.md  DELIVERY_CHECKLIST.md  FRONTEND_COMPONENT_TESTS_SUMMARY.md  FRONTEND_TEST_SUITE_DESIGN.md  FRONTEND_TEST_SUITE_DOCUMENTATION.md  INPUT_VALIDATION_SUMMARY.md  INPUT_VALIDATION_TEST_SUMMARY.md  PAGINATION_EDGE_CASES_TESTS.md  PAGINATION_IMPLEMENTATION_SUMMARY.md  PAGINATION_TESTS_GUIDE.md  PROJECT_ANALYSIS.md  QUERY_OPTIMIZATION_IMPLEMENTATION.md  QUERY_PROFILER_TESTS_SUMMARY.md  QUICK_START_CI.md  README_API_TESTS.md  (+33 more)
(+1942 files in other folders)
